--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                   					<input type="submit" value="Login" class="btn">
                 				</div>
 
-                				<p class="text-center text-muted mt-5 mb-0"> Don’t have an Account? <a href="./registor.html" class="fw-bold blink" ><span class="span">Register</span></a></p>
+                				<p class="text-center text-muted mt-5 mb-0"> Don’t have an Account?<span class="span"> <a href="./registor.html" class="fw-bold blink" >Register</a></span></p>
 
               				</form>
 
