--- a/registor.html
+++ b/registor.html
@@ -64,7 +64,7 @@
                   					<input type="submit" value="Registration" class="btn">
                 				</div>
 
-                				<p class="text-center text-muted mt-5 mb-0"> Allready have an account? <a href="./index.html" class="fw-bold blink"><span class="span">Login</span></a></p>
+                				<p class="text-center text-muted mt-5 mb-0"> Allready have an account? <span class="span"><a href="./index.html" class="fw-bold blink">Login</a></span></p>
 
               				</form>
 
